--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -2,10 +2,12 @@
 *{
     margin:0px;
     padding:0px;
+    font-family: 'Noto Serif Khojki', serif;
 }
-body{
+/* body{
     background-color: rgba(0,0,0,0.5);
-}
+} */
+/* header */
 header{
     background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
     height: 8vh;
@@ -28,6 +30,10 @@ ul li a{
     font-size: larger;
     color: white;
 }
+ul li a:hover{
+    color: rgb(130, 217, 235);
+  
+}
 
 .login{
   font-size: medium;
@@ -41,6 +47,7 @@ ul li a{
   font-weight: bold;
   cursor: pointer;
   border: none;
+  border-radius: 10px;
   
 
 }
@@ -49,14 +56,18 @@ ul li a{
     position: relative;
     bottom: 80px;
 }
-
-    .cont1{
+/* header */
+/* main1 */
+    .content1{
         text-align: center;
         font-size: xx-large;
         font-weight:bolder;
         background-color: rgba(0,0,0,0.5);
         
     }
+    /* main1 */
+
+    /* main2 */
     .main2{
         height: 155vh;
         /* border:20px solid transparent;
@@ -78,7 +89,7 @@ ul li a{
             margin:10px 10px;
            
             height: 150vh; 
-            background-color: rgb(12, 192, 243);
+            background-color:rgba(0,0,0,0.5);
         
     
         }
@@ -91,6 +102,8 @@ ul li a{
             justify-content: center;
             align-items: center;
             height: 150vh;
+            /* position: relative;
+            bottom: 70px; */
             
         }
     .box1{
@@ -104,6 +117,7 @@ ul li a{
     }
     .place{
         font-size: larger;
+        font-weight: bold;
     }
    
     .box2{
@@ -137,7 +151,7 @@ ul li a{
         color:rgb(19, 197, 16);
         font-size: larger;
     }
-    .prc{
+    .pricen{
         color: rgb(4, 10, 15);
         display: flex;
         flex-direction: column;
@@ -193,16 +207,16 @@ ul li a{
     .labeldots label:hover{
         background-color: black;
     }
-    #images1:checked~.gg1{
+    #images1:checked~.groundg1{
         margin-left: 0%;
 
     }
-    #images2:checked~.gg2{
+    #images2:checked~.groundg2{
 
     margin-left: -100%;
         
     }
-    #images3:checked~.gg3{
+    #images3:checked~.groundg3{
         margin-left: -200%;
         
     }
@@ -217,7 +231,7 @@ ul li a{
         height: 120vh;
              background-color: rgba(0,0,0,0.5);
         position: relative;
-      top:130px;
+         bottom:130px;
     }
     .headingbook{
         color: black;
@@ -240,7 +254,7 @@ ul li a{
     .sportss{
         width: 50%;
         height: 64px;
-     background-color: rgb(2, 255, 179);
+        background-color: rgb(2, 255, 179);
         font-size: 20px;
         text-align: center;
         border-radius: 20px;
@@ -248,7 +262,7 @@ ul li a{
     .durations{
         width: 50%;
         height: 64px;
-background-color: rgb(2, 255, 179);
+        background-color: rgb(2, 255, 179);
         font-size: 20px;
         text-align: center;
         border-radius: 20px;
@@ -256,17 +270,17 @@ background-color: rgb(2, 255, 179);
      input[type="date"]{
         width: 50%;
         height: 64px;
-   background-color: rgb(2, 255, 179);
+        background-color: rgb(2, 255, 179);
         font-size: 20px;
         text-align: center;
         border: 1px solid black;
         border-radius: 20px;
      }
-     .bok1{
+     .book1{
         text-align: center;
         color: black;
      }
-     .bok2{
+     .book2{
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -424,6 +438,7 @@ background-color: rgb(2, 255, 179);
 	border:3px solid rgb(39, 10, 228);
     box-shadow: 0 10px 10px rgba(6, 6, 6, 0.73);
 }
+/* main2 */
      
      /* footer */
 footer{
