--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -37,6 +37,8 @@
     cursor: pointer;
     background-color: rgb(22, 199, 110);
     color: white;
+    border-radius: 10px;
+    border: none;
     
     
 }
@@ -53,6 +55,7 @@
     cursor: pointer;
     background-color: rgb(22, 199, 110);
     color: white;
-    
+    border-radius: 10px;
+    border: none;
     
 }
