--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,10 @@ ul li a{
     font-size: larger;
     color: white;
 }
+ul li a:hover{
+    color: rgb(130, 217, 235);
+  
+}
 
 .login{
   font-size: medium;
@@ -59,63 +63,99 @@ ul li a{
 
 #main1{
     height: 86vh;
-    background: linear-gradient(90deg, rgb(0, 212, 255) 4%, rgba(0,212,255,1) 100%);
-    display: flex;
+       /* background: linear-gradient(90deg, rgb(44, 209, 242) 4%, rgb(81, 208, 234) 100%); */
+ display: flex;
     align-items: center;
+    background-image: linear-gradient(to right top, #13c0ec, #36a7dc, #2c8cec, #2e8de7, #5026e7);
+  
+/* background-color: #bec7d8eb; */
+  
     
 }
 .word1{
     font-size: 350%;
-    color: white; 
+    color: rgb(8, 8, 8); 
     margin-left: 3.5%;
+animation: change 5s;
 
 }    
+@keyframes change{
+    from{
+        color: black;
+    }
+    to{
+        color: white;
+    }
+}
+
 .player1{
     width:45%;
-    border-radius: 15%;
+    border-radius: 10%;
     margin-right: 3%;
 }
 /* main1 */
 /* main2 */
 #main2{
     height: 70vh;
-    display: flex;
-    justify-content: space-evenly;
+  /* display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 190px; */
     /* border:50px solid transparent;
     border-image: linear-gradient(90deg, rgb(226, 233, 234) 4rgb(219, 221, 222)16);
       */
       background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
-   
+ 
+}
+.mainchild{
+    margin: 0px 43px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 160px;
 }
 .box1{
-    width: 23%;
-    height: 82%;
+    width: 100%;
+    height: 130%;
     margin-top: 3%;   
     border-radius: 2%;
-    background: linear-gradient(90deg, rgb(13, 142, 202) 4%, rgb(18, 188, 231) 100%);
-    box-shadow: 0 10px 10px rgba(126, 126, 126, 0.57);
+    /* background: linear-gradient(90deg, rgb(102, 223, 247) 4%, rgb(102, 223, 247) 100%);
+    box-shadow: 0 10px 10px rgba(13, 7, 7, 0.57); */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
  color: white;
+ background-image: linear-gradient(to right top, #dce5e7, #36a7dc, #2c8cec, #2e8de7, #5026e7);
+ 
     
 } 
 
 .boxcontent1{
-    color:white;
+    color:rgb(7, 7, 7);
     font-size:130%;
+    font-weight: bold;
     position: relative;
-    bottom: 5%;
-    left: 5%;
+  
+    left: 3%;
+ 
 
  
 }
 .boxcontent2{
-    color:white;
+    color:rgb(7, 7, 7);
     font-size:130%;
     position: relative;
-    left: 0%;
+    top: 3%;
+    font-weight: bold;
+    padding: 0px 10px;
+ 
+}
+.boxcontent3{
+    color:rgb(7, 7, 7);
+    font-size:130%;
+    position: relative;
+    top:1%;
+    font-weight: bold;
+    padding: 0px 10px;
  
 }
 
@@ -133,19 +173,28 @@ ul li a{
             font-weight:bolder;
             position: relative;
             bottom: 10%;
+            color:rgb(7, 7, 7);
         }    
 .heading1{
     font-size: 190%;
     font-weight:bolder;
     position: relative;
+    bottom: 25%;
+    color:rgb(7, 7, 7);
+}
+.heading2{
+    font-size: 190%;
+    font-weight:bolder;
+    position: relative;
     bottom: 22%;
+    color:rgb(7, 7, 7);
 }
 .fa-volleyball,.fa-basketball,.fa-table-tennis-paddle-ball,.material-symbols-outlined{
-    color: white;
+    color: rgb(12, 9, 9);
 font-size:200%;
 }
 .fa-user{
-    color: white;
+    color: rgb(11, 9, 9);
     font-size:500%;
     position: relative;
     bottom: 12%;
@@ -153,7 +202,7 @@ font-size:200%;
     }
     
 .fa-people-roof{
-color: white;
+color: rgb(11, 9, 9);
 font-size:500%;
 position: relative;
 bottom: 12%;
@@ -199,7 +248,7 @@ bottom: 12%;
     width: 100%;
     position: absolute;
     transform-style: preserve-3d;
-    animation: rotate 50s linear infinite;
+    animation: rotate 20s linear infinite;
 }
 @keyframes rotate{
     from{
@@ -247,13 +296,15 @@ bottom: 12%;
     height: 80%;
     margin-top: 3%;   
     border-radius: 2%;
-    background: linear-gradient(90deg, rgb(129, 200, 231) 4%, rgb(180, 191, 194) 100%);
+    /* background: linear-gradient(90deg, rgb(123, 208, 244) 4%, rgb(98, 207, 237) 100%); */
     box-shadow: 0 10px 10px rgba(15, 12, 12, 0.66);
     display: flex;
     flex-direction: column;
     align-items: center;
     
     padding: 10px 15px;
+    background-image: linear-gradient(to right top, #13c0ec, #36a7dc, #2c8cec, #2e8de7, #5026e7);
+  
 }
 
 .person{
