--- a/assets/css/findplayers.css
+++ b/assets/css/findplayers.css
@@ -5,11 +5,13 @@
 }
 /* header */
 header{
-    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+    /* background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%); */
    
     height: 10vh;
     background-position: center;
     background-size: cover;
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+ 
  
 }
 ul{
@@ -60,8 +62,10 @@ ul li a:hover{
     /* border:20px solid transparent;
     border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
      */
-     background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
-   
+     /* background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+    */
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+ 
    
     
     }
@@ -163,7 +167,8 @@ input[type="search"]::placeholder{
     border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
     border-radius: 0px;
     */
-    background-color: black;
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+ 
     overflow: hidden;
     
     }
@@ -177,8 +182,10 @@ input[type="search"]::placeholder{
 
     }
     .child1{
+        background-image: linear-gradient(to right top, #dce5e7, #36a7dc, #2c8cec, #2e8de7, #5026e7);
+ 
         /* background-color: rgb(105, 158, 208); */
-        background-image: linear-gradient(to right top, #27869e, #4391b6, #3986d4, #20409e, #5026e7);
+        /* background-image: linear-gradient(to right top, #27869e, #4391b6, #3986d4, #20409e, #5026e7); */
         height: 150px;
         width: 48%;
         color: white;
