--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -9,10 +9,12 @@
 } */
 /* header */
 header{
-    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+    /* background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%); */
     height: 8vh;
     background-position: center;
     background-size: cover;
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+ 
  
 }
 ul{
