--- a/assets/css/playerprofile.css
+++ b/assets/css/playerprofile.css
@@ -4,7 +4,8 @@
     padding:0px;
 }
 header{
-    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+ 
     height: 15vh;
     background-position: center;
     background-size: cover;
