--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,15 @@
 }
 /* header */
 header{
-    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+    /* background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%); */
     height: 10vh;
     background-position: center;
     background-size: cover;
    position: sticky;
    top:0%;
    z-index: 2;
+   background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+ 
 }
 
 ul{
@@ -103,7 +105,11 @@ animation: change 5s;
     /* border:50px solid transparent;
     border-image: linear-gradient(90deg, rgb(226, 233, 234) 4rgb(219, 221, 222)16);
       */
-      background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+      /* background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+  */
+  /* background-image: linear-gradient(to right top, #020426, #041f2c, #041d36, #07172c, #04020b);
+  */
+  background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
  
 }
 .mainchild{
@@ -111,6 +117,8 @@ animation: change 5s;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 160px;
+    padding-top:50px;
+    
 }
 .box1{
     width: 100%;
@@ -214,11 +222,15 @@ bottom: 12%;
     height: 55vh;
     display: flex;
     justify-content: space-evenly;
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+ 
     /* border:50px solid transparent;
     border-image: linear-gradient(90deg, rgb(226, 233, 234) 4rgb(219, 221, 222)16);
      */
-     background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
-   
+     /* background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+    */
+    /* background-image: linear-gradient(to right top, #020426, #041f2c, #041d36, #07172c, #04020b); */
+ z-index: -2;
 }
 .sportsheading{
     font-size:30px;
@@ -286,9 +298,10 @@ bottom: 12%;
     /* border:50px solid transparent;
     border-image: linear-gradient(90deg, rgb(226, 233, 234) 4rgb(219, 221, 222)16);
      */
-     background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
-   
-   
+     /* background-image: linear-gradient(to right top, #00021a, #041f2c, #041d36, #07172c, #04020b);
+  */
+  background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+ 
    
 }
 .person1{
