--- a/assets/css/bookground.css
+++ b/assets/css/bookground.css
@@ -62,49 +62,67 @@ ul li a:hover{
 }
 /* header */
 /* main1 */
-#main1{
+.main1{
     overflow: hidden;
-    height: 50vh;
-    /* border:20px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
-     */
-     /* background: linear-gradient(90deg, rgb(6, 8, 8) 4%, rgb(0, 0, 0) 100%);
-    */
-     /* position: sticky;
+    height: 16vh;
+    border: 20px solid;
+     border-image: repeating-linear-gradient(30deg, #00021a, #00080c, #15034a 20px) 60;
+     position: sticky;
      top:0%;
-     z-index: 2; */
-     /* background-image: linear-gradient(to right top, #020d10, #030a0e, #0a1a2a, #030d17, #060212);
-  */
-  background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- 
-    
+     z-index: 2;
+   
+  background-color: white;
     }
     .content1{
         text-align: center;
         font-size: xx-large;
         font-weight:bolder;
-        color: white;
+        color: rgb(11, 7, 7);
+        position: relative;
+        top:8px;
+     
         
+    }
+    .locationselect{
+        width: 7%;
+        height: 44px;
+        background-color: rgb(255, 255, 255);
+       
+        font-size: 17px;
+        display: flex;
+        justify-content: center;
+        cursor: pointer;
+        text-align: center;
+        border-radius: 5%;
+        color: #000000;
+        border: 2px solid rgb(35, 156, 211);
+        position: relative;
+        left: 130px;
+        bottom:28px;
+
     }
     .content2{
         display: flex;
         justify-content: center;
-        color: white;
+        color: rgb(0, 0, 0);
+     
     
     }
     .cont3{
-        background-color: rgb(2, 2, 45);
-        border: 5px solid rgb(25, 11, 82);
+        background-color: rgb(230, 230, 234);
+        border: 5px solid rgb(0, 0, 0);
         border-radius: 10%;
-        width: 6%;
-        box-shadow: 0 10px 10px rgba(14, 1, 1, 0.23);
+        width: 90px;
+        height: 90px;
+        box-shadow: 0 10px 10px rgba(224, 240, 239, 0.23);
         display: flex;
         flex-direction: column;
          align-items: center;
-        margin-left: 92%;
+         margin-left: 20px;
+        
        position: relative;
-       bottom: 90px;
-       right: 2%;
+       bottom: 190px;
+       left: 87%;
     
         
     }
@@ -116,13 +134,15 @@ background:rgba(67, 67, 57, 0.1);
 display: flex;
 justify-content: center;
 border-radius: 2%;
-border: 2px solid white;
+border: 2px solid rgb(0, 0, 0);
+position: relative;
+bottom: 83px;
 
 
 }  
 input[type="search"]::placeholder{
     font-size: 130%;
-    color: white;
+    color: rgb(0, 0, 0);
  
 } 
 #search2{
@@ -131,21 +151,22 @@ input[type="search"]::placeholder{
     border: none;
     outline: none;
     padding: 20px 20px;
-    color: white;
+    color: rgb(0, 0, 0);
 
 }
-.fa-location-dot{
-    font-size: 170%;
-    color: white;
+.locationicon{
+    width: 58px;
+    height: 58px;
+    position: relative;
+    left: 80px;
+    top: 26px;
 }
 .fa-magnifying-glass{
     font-size:150%;
-    color: white;
+    color: rgb(0, 0, 0);
 }
-.fa-user{
-    font-size: xx-large;
-    margin-top: 5px;
-    color: white;
+.profileusericon{
+  width: 38px;
    
 }
 .searchbtn{
@@ -158,153 +179,90 @@ input[type="search"]::placeholder{
 }  
 .login2{
     font-size: medium;
-    padding: 5px 15px;
-    height: 20%;
+  padding: 5px 10px;
+    height: 90%;
     width: 100%;
-    background-color: rgb(5, 120, 105);
+    background-color: rgb(4, 44, 243);
     color: white;
-    font-weight: bold;
+    font-weight:200;
     cursor: pointer;
     border: none;
-   margin-bottom: 5px;
+    border-radius: 10%;
+ 
     
   
   }
   /* main1 */
   /* city */
   .city{
+    background-color: white;
+    /* background-image: linear-gradient(to right top, #e5faff, #ebebeb, #d2deeb, #cad6e1, #f2f0fa); */
   
-    /* background: linear-gradient(90deg, rgb(9, 14, 15) 4%, rgb(0, 0, 0) 100%);
-    */
-    /* border:20px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60; */
-
-   
     font-size: 270%;
-    color: rgb(224, 219, 219);
+    color: rgb(7, 5, 5);
     text-align: center;
     font-weight: bolder;
 position: relative;
-bottom: 50px;
+bottom: 130px;
 
     
 }
 /* city */
 /* main2 */
-#main2{
-    
-    height: 7vh;
-    
-    /* border:20px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60; */
- /* display: flex;
- flex-direction: row;
- flex-wrap: wrap;
- justify-content:space-between; */
- padding: 20px 20px;
- display: grid;
- grid-template-columns: 1fr 1fr 1fr;
- grid-column-gap: 110px;
- /* background: linear-gradient(90deg, rgb(13, 18, 19) 4%, rgb(0, 0, 0) 100%);
-      */
 
-      /* background-image: linear-gradient(to right top, #020426, #041f2c, #041d36, #07172c, #04020b);
-  */
-  background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- 
-    
-
-}
-
-/* .placesbox{
-    margin-left: 90px;
-    display: grid;
-    grid-template-columns: 2fr 2fr 2fr ;
-   grid-column-gap: 200px;
-
-} */
 .box1{
     width: 100%;
     height: 50px;
-    
+    background-color: white;
     border-radius: 0%;
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-
-  position: relative;
-  top: 10px;
-  /* padding: 10px 1px;
-  margin-left:13%; */
-  display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
-    /* grid-column-gap: 70px; */
-/* display: flex; */
-padding-left: 50px;
-
-  
    
+  position: relative;
+  
+  bottom: 90px;
+
+
+
  
+}
+.boxinfo{
+   display: flex;
+   justify-content: center;
+   justify-content: space-around;
+   
 }
 
 
 .locate1{
-    border-radius: 10%;
-
-    width: 100px;
+ border: 2px solid none;
+    height:38px;
+    padding: 5px 15px;
+    width: 150px;
     font-size: 170%;
     color: rgb(6, 16, 9);
-   
-    background-color: #17f538;
-padding-right: 30px;
-
- text-align: center;
- margin-left: 160px;
-
-
-
-}
-
-.locate2{
-    border-radius: 10%;
-    width: 100px;
-    font-size: 170%;
-    color: rgb(12, 2, 2);
+    background-color:  #c0baca;
     text-align: center;
-    background-color:  #17f538;
-    padding-right: 30px;
-    position: relative;
-    left:130px ;
+    border-radius: 5%;
+    box-shadow: 0 3px 10px rgb(3, 10, 87);
     
 
-}
-.locate3{
-    border-radius: 10%;
-    width: 100px;
-    font-size: 170%;
-    color: rgb(15, 4, 4);
-    text-align: center;
-    background-color:  #17f538;
-    padding-right: 30px;
-    position: relative;
-    left:120px ;
+
+
+
+
 
 }
+
+
 /* main2 */
 /* main3 */
 .main3{
     
     height: 290vh;
-    /* background-image: linear-gradient(to right top, #020426, #041f2c, #041d36, #07172c, #04020b);
-  */
-  background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- 
-    
-
-    /* border:20px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60; */
+   /* background-color: rgb(191, 236, 255); */
    overflow: hidden;
-   /* background: linear-gradient(90deg, rgb(102, 223, 247) 4%, rgb(109, 226, 249) 100%); */
-   color: white;
-   
+     color: white;
+    border: 20px solid;
+     border-image: repeating-linear-gradient(30deg, #00021a, #00080c, #15034a 20px) 60;
     
 }
 
@@ -322,7 +280,7 @@ padding-right: 30px;
     height: 420px;
     border-radius: 4%;
     /* background: linear-gradient(90deg, rgb(1, 1, 12) 4%, rgb(1, 10, 12) 100%); */
-    box-shadow: 0 10px 10px rgba(16, 3, 3, 0.23);
+    box-shadow: 0 3px 10px rgb(3, 10, 87);
     margin-left: 13%;
     display: flex;
     flex-direction:column;
@@ -330,48 +288,48 @@ padding-right: 30px;
     cursor: pointer;
     background-color: white;
     color: black;
+    background-image: linear-gradient(to right top, #ffffff, #ffffff, #ffffff, #ffffff, #01123e);
+  
     
 }
 .child1:hover{
     background-color: rgb(201, 225, 229);
-    transition: 1s;
     transform:scale(1);
-	border:3px solid rgb(18, 31, 174);
+	border:3px solid rgb(2, 3, 14);
 }
 .groimg{
     width: 90%;
     border-radius: 2%;
     border:2px solid transparent;
     border-image: linear-gradient(90deg, rgb(11, 11, 11) 4%, rgb(14, 16, 16) 100%)60;
-    color: rgb(8, 5, 5);
+    color: rgb(12, 10, 10);
 
     
 }
 .groundn{
   /* color:rgb(27, 25, 25); */
-  color: rgb(14, 8, 8);
+  color: rgb(6, 4, 4);
   font-size:23px;
   font-weight:bolder;
 
 }
 .locationn{
     /* color:rgb(23, 21, 21); */
-    color: rgb(8, 5, 5);
+    color: rgb(0, 0, 0);
     font-size:23px;
     font-weight:bolder;
 }
-.fa-table-tennis-paddle-ball{
-    /* color: rgb(17, 16, 16); */
-font-size:190%;
-color: rgb(0, 0, 0);
+.cricketicon{
+    width: 35px;
 }
+
 
 .symbol{
 display: flex;
 flex-direction: column;
 flex-direction: row;
 position: relative;
-right: 35%;
+right: 33%;
 bottom: 2%;
 align-content: space-around;
 align-items: flex-end;
@@ -379,9 +337,11 @@ align-items: flex-end;
 }  
 .ratings{
     display: flex;
+    justify-content: space-around;
     position: relative;
     left: 38%;
     bottom: 8%;
+
 }
 .book{
     font-size: medium;
@@ -394,13 +354,23 @@ align-items: flex-end;
     cursor: pointer;
     border: none;
   position: relative;
-  top:90%;
+  top:180%;
   border-radius: 10%;
     
 }
 .fa-star{
-    color: goldenrod;
-    font-size: 20px;
+    color: rgb(255, 183, 0);
+   font-size: 17px;
+   position: relative;
+   right: 10px;
+
+}
+.ratingno{
+    position: relative;
+    font-size:130%;
+    font-weight: bold;
+    bottom: 3px;
+    color: rgb(0, 0, 0);
 }
 /* main3 */
 /* footer */
