--- a/assets/css/bookground.css
+++ b/assets/css/bookground.css
@@ -288,7 +288,7 @@ bottom: 130px;
     cursor: pointer;
     background-color: white;
     color: black;
-    background-image: linear-gradient(to right top, #ffffff, #ffffff, #ffffff, #ffffff, #01123e);
+    background-image: linear-gradient(to right top, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff);
   
     
 }
