--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -72,7 +72,7 @@ ul li a:hover{
 
     /* main2 */
     .main2{
-        height: 155vh;
+        height: 175vh;
         background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
  
       
@@ -89,10 +89,10 @@ ul li a:hover{
             color: white;
             margin:10px 10px;
            
-            height: 150vh; 
+            height: 170vh; 
           background-color:rgb(218, 222, 241) ;
           border-radius: 2%;
-          background-image: linear-gradient(to right top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833);
+          background-image: linear-gradient(to top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833);
 
         
     
@@ -106,15 +106,15 @@ ul li a:hover{
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 150vh;
+            height: 170vh;
             /* position: relative;
             bottom: 70px; */
-            background-image: linear-gradient(to right top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833);
+            /* background-image: linear-gradient(to top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833); */
 
-            
+        
         }
     .box1{
-        color: rgb(0, 0, 0);
+        color: rgb(253, 251, 251);
         display: flex;
         flex-direction: column;
        align-items: center;
@@ -139,7 +139,7 @@ ul li a:hover{
    
  
     .pricelast{
-        background-color: rgb(12, 215, 73);
+        background-color: rgba(255, 255, 255, 0.906);
         width: 102px;
         height: 30px;
         display: flex;
@@ -149,7 +149,7 @@ ul li a:hover{
         position: relative;
         left: 7px;
         top: 7px;
-        border-radius: 20px;
+        border-radius: 10px;
         color: black;
     
     }
@@ -166,7 +166,7 @@ ul li a:hover{
        font-size: larger;
        position: relative;
        right: 7px;
-       top: 12px;
+       top: 15px;
     }
     /* slider */
 
@@ -241,69 +241,63 @@ ul li a:hover{
 
     
         position: relative;
-         bottom:130px;
-         background-image: linear-gradient(to right top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833);
+         bottom:220px;
+         background-image: linear-gradient(to top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833);
 
+        
     }
     .headingbook{
         color: rgb(0, 0, 0);
  
         font-weight: bolder;
         font-size: larger;
-        width: 90px;
-        height: 20px;
-        border: 2px solid black;
-        border-radius: 20px;
+        width: 50%;
+        height: 30px;
+        /* border: 2px solid black; */
+        border-radius: 5px;
         text-align: center;
+        background-color: #92919136;
+        padding: 10px 0px;
     }
     .timings{
-        width: 30%;
+        width: 50%;
         height: 64px;
         
         font-size: 20px;
         text-align: center;
-        border-radius: 20px;
-        background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-        color: rgb(18, 192, 134);
+        border-radius: 5px;
+       
  
     }
     .sportss{
-        width: 30%;
+        width: 50%;
         height: 64px;
-        background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-        color: rgb(18, 192, 134);
- 
- 
+        
         font-size: 20px;
         text-align: center;
-        border-radius: 20px;
+        border-radius: 5px;
     }
     .durations{
-        width: 30%;
+        width: 50%;
         height: 64px;
-        background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-        color: rgb(18, 192, 134);
- 
+       
  
         font-size: 20px;
         text-align: center;
-        border-radius: 20px;
+        border-radius: 5px;
     }
      input[type="date"]{
-        width: 30%;
+        width: 50%;
         height: 64px;
-        background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- 
-        color: rgb(18, 192, 134);
- 
+        
         font-size: 20px;
         text-align: center;
         border: 1px solid black;
-        border-radius: 20px;
+        border-radius: 5px;
      }
      .book1{
         text-align: center;
-        color: black;
+        color: rgb(255, 255, 255);
      }
      .book2{
         display: flex;
@@ -312,52 +306,52 @@ ul li a:hover{
         justify-content: space-between;
      }
      .pay{
-        width: 90%;
-        height: 44px;
-        background-color: rgb(14, 225, 81);
-        font-size: 17px;
-        font-weight: bold;
-        display: flex;
-        justify-content: center;
-        padding: 0px 0px;
+        width: 100%;
+        height: 64px;
+        background-color: rgba(91, 173, 37, 0.906);
+        font-size: 20px;
+        font-weight: bolder;
+        
+        padding: 10px 142px;
         border:2px solid black;
         cursor: pointer;
         border-radius: 10px;
         border: none;
         box-shadow: 0 3px 10px rgb(0, 0, 0);
+
         
         
      }
      .paycash{
-        width: 90%;
-        height: 44px;
-        background-color: rgb(14, 225, 81);
-        font-size: 17px;
-        display: flex;
-        justify-content: center;
-        padding: 0px 35px;
-    border:2px solid black;
+        width: 100%;
+        height: 64px;
+        background-color: rgba(91, 173, 37, 0.906);
+        font-size: 20px;
+        font-weight: bolder;
+        
+        padding: 10px 139px;
+        border:2px solid black;
         cursor: pointer;
-         font-weight: bold;
-         border-radius: 10px;
-         border: none;
-         box-shadow: 0 3px 10px rgb(0, 0, 0);
+        border-radius: 10px;
+        border: none;
+        box-shadow: 0 3px 10px rgb(0, 0, 0);
+
      }
      .addplayers{
         width: 100%;
-        height: 44px;
-        background-color: rgb(14, 225, 81);
+       
+        background-color: rgba(91, 173, 37, 0.906);
         font-size: 17px;
         display: flex;
         justify-content: center;
-        padding: 10px 10px;
+        padding: 10px 30px;
         cursor: pointer;
-        border-radius: 25px;
+        border-radius: 10px;
         box-shadow: 0 3px 10px rgb(110, 107, 124);
      }
   .locationinfo{
     width: 290px;
-    height: 125px;
+    
     border: 2px solid black;
     display: flex;
     flex-direction: column;
@@ -367,9 +361,10 @@ ul li a:hover{
     top: 20px;
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
  color: white;
- padding: 5px 10px;
+ padding: 10px 10px;
  border-radius: 4%;
  box-shadow: 0 3px 10px rgb(0, 0, 0);
+ line-height: 1.6;
     
   }
   .locationinfo:hover{
@@ -382,20 +377,22 @@ ul li a:hover{
   }
   .sportsavail{
     width: 290px;
-    height: 125px;
+    height: 175px;
     border: 2px solid black;
     display: flex;
-    
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     position: relative;
     left: 175px; 
-    bottom: 141px;
+    bottom: 185px;
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
  color: white;
 
-  padding: 5px 10px;
+  /* padding: 5px 10px; */
   border-radius: 4%;
   box-shadow: 0 3px 10px rgb(0, 0, 0);
+  line-height: 1.6;
 
 
   }
@@ -403,37 +400,38 @@ ul li a:hover{
        background-color: rgb(222, 232, 241);
     transition: 0.95s;
     transform:scale(.99);
-	border:3px solid rgb(39, 10, 228);
+	border:3px solid rgb(255, 255, 255);
     /* box-shadow: 0 10px 10px rgba(6, 6, 6, 0.73); */
 
    }
    .cricketicon{
     width: 35px;
+    
 }
 .timinginfo{
     width: 200px;
-    height: 70px;
+    
     border: 2px solid black;
     text-align: center;
     position: relative;
-    bottom: 120px;
+    bottom: 160px;
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
  color: white;
- padding: 5px 10px;
+ padding: 25px 10px;
  border-radius: 4%;
  box-shadow: 0 3px 10px rgb(0, 0, 0);
 }.timinginfo:hover{
        background-color: rgb(222, 232, 241);
     transition: 0.95s;
     transform:scale(.99);
-	border:3px solid rgb(39, 10, 228);
+	border:3px solid rgb(255, 255, 255);
     /* box-shadow: 0 10px 10px rgba(6, 6, 6, 0.73); */
 }
 
  
 .rules{
     width: 590px;
-    height: 130px;
+
     border: 2px solid black;
     color: rgb(4, 10, 15);
     display: flex;
@@ -441,20 +439,21 @@ ul li a:hover{
    align-items: center;
    font-size: larger;
    position: relative;
-   bottom: 120px;
+   bottom: 150px;
    left: 65px;
    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
  color: white;
- padding: 5px 10px;
+ padding: 25px 10px;
  border-radius: 4%;
  box-shadow: 0 3px 10px rgb(0, 0, 0);
+ line-height: 1.6;
 
 }
 .rules:hover{
        background-color: rgb(222, 232, 241);
     transition: 0.95s;
     transform:scale(.99);
-	border:3px solid rgb(39, 10, 228);
+	border:3px solid rgb(255, 255, 255);
     /* box-shadow: 0 10px 10px rgba(6, 6, 6, 0.73); */
 }
 .price{
@@ -477,12 +476,12 @@ ul li a:hover{
        background-color: rgb(222, 232, 241);
     transition: 0.95s;
     transform:scale(.99);
-	border:3px solid rgb(39, 10, 228);
+	border:3px solid rgb(255, 255, 255);
     /* box-shadow: 0 10px 10px rgba(6, 6, 6, 0.73); */
 }
 .addplayer{
     width: 590px;
-    height: 120px;
+   
     border: 2px solid black;
     color: rgb(4, 10, 15);
     display: flex;
@@ -490,11 +489,11 @@ ul li a:hover{
    align-items: center;
    font-size: larger;
    position: relative;
-   bottom: 60px;
+   bottom: 90px;
    left: 70px;
    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
  color: white;
- padding: 5px 10px;
+ padding: 20px 10px;
  border-radius: 4%;
  box-shadow: 0 3px 10px rgb(0, 0, 0);
 }
@@ -502,7 +501,7 @@ ul li a:hover{
        background-color: rgb(222, 232, 241);
     transition: 0.95s;
     transform:scale(.99);
-	border:3px solid rgb(39, 10, 228);
+	border:3px solid rgb(255, 255, 255);
     /* box-shadow: 0 10px 10px rgba(6, 6, 6, 0.73); */
 }
 /* main2 */
