--- a/assets/css/playerprofile.css
+++ b/assets/css/playerprofile.css
@@ -66,7 +66,9 @@ ul li a:hover{
         text-align: center;
         font-size: xx-large;
         font-weight:bolder;
-        
+        position: relative;
+        bottom: 150px;
+        color: white;
     }
    
     .cont2{
@@ -111,6 +113,16 @@ ul li a:hover{
     
   
   }
+  .cricketicon{
+    width: 30px;
+  }
+  .fa-star{
+    color: rgb(255, 183, 0);
+   font-size: 17px;
+   position: relative;
+   right: 10px;
+
+}
   .main2{
     height: 87vh;
     /* border:20px solid transparent;
@@ -126,7 +138,7 @@ ul li a:hover{
         grid-column-gap: 20px;
     }
     .sidebar1{ 
-        background-color:rgba(243, 233, 233, 0.2);
+        background-color:rgba(255, 255, 255, 0.2);
         color: white;
         margin:10px 10px;
         border-radius: 9%; 
@@ -134,17 +146,19 @@ ul li a:hover{
 
     }
     .sidebar2{
-        background-color: rgba(253, 243, 243, 0.2);
+        background-color: rgba(255, 255, 255, 0.2);
         color: white;  
         margin:10px 10px;  
         border-radius: 0%; 
         display: flex;
         justify-content: center;
         align-items: center;
+        
     }
     .box1{
        
-            background-color: rgb(9, 220, 223);
+        background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+ 
             border: 1px solid rgb(25, 11, 82);
             border-radius: 10%;
             width: 55%;
@@ -168,8 +182,7 @@ ul li a:hover{
         background-color: rgb(208, 216, 216);
         padding: 10px 10px;
         position: relative;
-        left: 95px;
-        top: 20px;
+    bottom: 50px;
     }
    .profilepic{
     width: 170px;
@@ -190,60 +203,73 @@ ul li a:hover{
        margin-bottom: 5px;
        position: relative;
        top: 30px;
-        
+        box-shadow: 0 3px 10px rgb(3, 10, 87);
       
       }
     
     .container{
-        background-color: rgb(14, 15, 71);
+       background-color: rgba(15, 67, 209, 0.82);
         width: 390px;
         height: 70vh;
         display: flex;
         flex-direction: column;
-        box-shadow: rgba(11, 7, 7, 0.2);
+       
         margin-bottom: 20%;
-        border-radius: 20px;
+        border-radius: px;
+        border: 1px solid black;
+        box-shadow: 0 3px 10px rgb(0, 0, 0);
     }
     .top{
-        color:rgb(227, 13, 113);
+        color:rgb(0, 0, 0);
         padding: 2%;
     }
     .main{
         flex: 1;
-        color: aqua;
-        background-color: rgb(31, 155, 209);
+        color: rgb(0, 0, 0);
+        background-color: rgba(229, 233, 236, 0.952);
         padding: 20px 10px;
 
     }
     .messageto{
-        background-color: rgb(10, 254, 63);
+        background-color: rgb(248, 248, 248);
         color: black;
-        width: fit-content;
+        width: 10%;
         padding: 7px 15px;
         margin-left: 13px;
+        border-radius: 35%;
+        box-shadow: 0 3px 10px rgba(240, 238, 238, 0.626);
     }
     .messagefrom{
-        background-color: rgb(26, 229, 209);
-        color: black;
-        width: fit-content;
+        background-color: rgb(126, 126, 126);
+        color: rgb(255, 255, 255);
+        width:10%;
         padding: 7px 15px;
         margin-left: 78%;
+        border-radius: 35%;
+        box-shadow: 0 3px 10px rgba(240, 238, 238, 0.626);
     }
     .bottom form{
         display: flex;
+        background-color: rgba(229, 233, 236, 0.952);
+      
     }
+      
     form input{
-        flex: 1;
-        height: 30px;
+       width: 320px;
+        height: 27px;
         border: 1px solid black;
         padding-left: 7px;
         outline: none;
+        border-radius: 0px;
+       
     }
     form button{
+        width: 16%;
         background-color: rgb(27, 238, 146);
         font-size: medium;
         border: none;
         outline: none;
+        border-radius: 0px;
     }
     .fa-table-tennis-paddle-ball{
         color: rgb(234, 234, 234);
@@ -281,6 +307,15 @@ ul li a:hover{
         
       
       }
+      #message{
+    
+      }
       .userlogo{
       
+      }
+      .rightarrow{
+        width: 90px;
+        position: relative;
+        left: 700px;
+        bottom: 500px;
       }
