--- a/assets/css/playerprofile.css
+++ b/assets/css/playerprofile.css
@@ -2,6 +2,10 @@
 *{
     margin:0px;
     padding:0px;
+    /* overflow: hidden; */
+}
+body{
+    overflow-y: hidden;
 }
 header{
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
@@ -318,4 +322,41 @@ ul li a:hover{
         position: relative;
         left: 700px;
         bottom: 500px;
+      }
+      /* dropdown */
+      .staticsreport{
+        color:black;
+        position: relative;
+        left: 17px;
+      }
+      .dropdownstatistics{
+        position: relative;
+        left: 150px;
+      }
+      .statisticsbtn{
+        padding: 10px 20px;
+        background-color: #07172c;
+        color: white;
+        cursor: pointer;
+        border: none;
+      }
+      .dropdownlist{
+      
+        color: black;
+        background-color: rgb(189, 195, 208);
+        width: 210px;
+        height: 170px;
+        position: relative;
+        right: 50px;
+        display:none;
+        font-size: 18px;
+        font-weight: 500;
+        text-align: left;
+        border-radius: 5px;
+      }
+      .dropdownlist p:hover{
+        background-color: rgb(240, 252, 255);
+      }
+      .dropdownstatistics:hover .dropdownlist{
+        display: block;
       }
