--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -351,7 +351,7 @@ ul li a:hover{
      }
   .locationinfo{
     width: 290px;
-    
+    height: 190px;
     border: 2px solid black;
     display: flex;
     flex-direction: column;
@@ -361,7 +361,7 @@ ul li a:hover{
     top: 20px;
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
  color: white;
- padding: 10px 10px;
+ /* padding: 10px 10px; */
  border-radius: 4%;
  box-shadow: 0 3px 10px rgb(0, 0, 0);
  line-height: 1.6;
@@ -377,7 +377,7 @@ ul li a:hover{
   }
   .sportsavail{
     width: 290px;
-    height: 175px;
+    height: 185px;
     border: 2px solid black;
     display: flex;
     flex-direction: column;
@@ -385,7 +385,7 @@ ul li a:hover{
     justify-content: center;
     position: relative;
     left: 175px; 
-    bottom: 185px;
+    bottom: 195px;
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
  color: white;
 
