--- a/assets/css/bookground.css
+++ b/assets/css/bookground.css
@@ -2,20 +2,17 @@
 *{
     margin:0px;
     padding:0px;
+ 
+
 }
 /* header */
 header{
-    /* background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
-    */
+  
     height: 10vh;
     background-position: center;
     background-size: cover;
-    /* position: sticky;
-   top:0%;
-   z-index: 2;
-  */
   background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- 
+  font-family: 'Noto Serif Khojki', serif;
 }
 ul{
     display: flex;
@@ -40,8 +37,8 @@ ul li a:hover{
 .login{
   font-size: medium;
   padding: 5px 15px;
-  height: 113%;
-  width: 102%;
+  height: 100%;
+  width: 105%;
   background-color: rgb(5, 34, 120);
   color: white;
   position: relative;
