--- a/assets/css/findplayers.css
+++ b/assets/css/findplayers.css
@@ -2,6 +2,8 @@
 *{
     margin:0px;
     padding:0px;
+   
+
 }
 /* header */
 header{
@@ -9,7 +11,7 @@ header{
     background-position: center;
     background-size: cover;
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- 
+    font-family: 'Noto Serif Khojki', serif;
  
 }
 ul{
