--- a/assets/css/playerprofile.css
+++ b/assets/css/playerprofile.css
@@ -13,6 +13,7 @@ header{
     height: 15vh;
     background-position: center;
     background-size: cover;
+    
  
 }
 ul{
@@ -32,6 +33,8 @@ ul li a{
     text-decoration: none;
     font-size: larger;
     color: white;
+    font-family: 'Noto Serif Khojki', serif;
+
 }
 ul li a:hover{
     color: rgb(130, 217, 235);
@@ -87,7 +90,7 @@ ul li a:hover{
          align-items: center;
         margin-left: 92%;
        position: relative;
-       bottom: 54px;
+       bottom: 68px;
      
     
         
@@ -136,9 +139,7 @@ ul li a:hover{
 }
   .main2{
     height: 87vh;
-    /* border:20px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
-     */
+  
    
     
     }
